--- a/ListasSarlaft/ListasSarlaft.csproj
+++ b/ListasSarlaft/ListasSarlaft.csproj
@@ -652,6 +652,7 @@
     <Content Include="MastersPages\Sitio.Master" />
     <Content Include="Scripts\Chart.js" />
     <Content Include="Scripts\DiagramCommon.js" />
+    <Content Include="Scripts\DownloadJquery.js" />
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
