actualizacion para crezcamos

--- a/ListasSarlaft/ListasSarlaft.csproj
+++ b/ListasSarlaft/ListasSarlaft.csproj
@@ -261,6 +261,7 @@
     <Content Include="Formularios\Sarlaft\Admin\RpteConsolidadoSarlaft.aspx" />
     <Content Include="Formularios\Sarlaft\Admin\RpteDetalleSarlaft.aspx" />
     <Content Include="Formularios\Sarlaft\Admin\RpteRegistroSarlaft.aspx" />
+    <Content Include="Formularios\Sarlaft\Admin\RpteTotalSarlaft.aspx" />
     <Content Include="Formularios\Sarlaft\Admin\RpteTrazaSarlaft.aspx" />
     <Content Include="Formularios\Sitio\ReestablecerContrasena.aspx" />
     <Content Include="Formularios\AdminUsers\Roles.aspx" />
@@ -759,12 +760,8 @@
     </None>
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
-    <None Include="Properties\PublishProfiles\Sherlock.pubxml" />
     <None Include="Properties\PublishProfiles\Sherlock3.5.0.pubxml" />
     <None Include="Properties\PublishProfiles\Sherlock340.pubxml" />
-    <None Include="Properties\PublishProfiles\Sherlock340_LinQ.pubxml" />
-    <None Include="Properties\PublishProfiles\Sherlock41.pubxml" />
-    <None Include="Properties\PublishProfiles\SherlockSE.pubxml" />
     <Content Include="ReporteDataSer.xsc">
       <DependentUpon>ReporteDataSer.xsd</DependentUpon>
     </Content>
@@ -773,7 +770,6 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </Content>
-    <None Include="Properties\PublishProfiles\SherlockV4.0_Riesgos.pubxml" />
     <None Include="ReporteDataSer.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>ReporteDataSer.Designer.cs</LastGenOutput>
@@ -938,6 +934,7 @@
     <Content Include="UserControls\Sarlaft\RpteConsolidadoSarlaft.ascx" />
     <Content Include="UserControls\Sarlaft\RpteDetalleSarlaft.ascx" />
     <Content Include="UserControls\Sarlaft\RpteRegistroSarlaft.ascx" />
+    <Content Include="UserControls\Sarlaft\RpteTotalSarlaft.ascx" />
     <Content Include="UserControls\Sarlaft\RpteTrazaSarlaft.ascx" />
     <Content Include="UserControls\Sitio\RestablecerContrasena.ascx" />
     <Content Include="UserControls\AdminUsers\Roles.ascx" />
@@ -2365,6 +2362,13 @@
     </Compile>
     <Compile Include="Formularios\Sarlaft\Admin\RpteRegistroSarlaft.aspx.designer.cs">
       <DependentUpon>RpteRegistroSarlaft.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Sarlaft\Admin\RpteTotalSarlaft.aspx.cs">
+      <DependentUpon>RpteTotalSarlaft.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\Sarlaft\Admin\RpteTotalSarlaft.aspx.designer.cs">
+      <DependentUpon>RpteTotalSarlaft.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Sarlaft\Admin\RpteTrazaSarlaft.aspx.cs">
       <DependentUpon>RpteTrazaSarlaft.aspx</DependentUpon>
@@ -4217,6 +4221,13 @@
     </Compile>
     <Compile Include="UserControls\Sarlaft\RpteRegistroSarlaft.ascx.designer.cs">
       <DependentUpon>RpteRegistroSarlaft.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Sarlaft\RpteTotalSarlaft.ascx.cs">
+      <DependentUpon>RpteTotalSarlaft.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserControls\Sarlaft\RpteTotalSarlaft.ascx.designer.cs">
+      <DependentUpon>RpteTotalSarlaft.ascx</DependentUpon>
     </Compile>
     <Compile Include="UserControls\Sarlaft\RpteTrazaSarlaft.ascx.cs">
       <DependentUpon>RpteTrazaSarlaft.ascx</DependentUpon>
